Add tooltip clarifying Media Directory is only used without Jellyfin API

--- a/templates/index.html
+++ b/templates/index.html
@@ -262,6 +262,7 @@
                         </h3>
                         <div class="path-selector">
                             <label for="scanPath">Media Directory</label>
+                            <span class="tooltip" title="Only used when Jellyfin API is disabled. When using Jellyfin, files are discovered via the API.">?</span>
                             <div class="path-input-group">
                                 <input type="text" id="scanPath" placeholder="/media/movies" readonly>
                                 <button class="btn btn-secondary" id="browseBtn" title="Browse">
